@@ -1,3 +1,12 @@
+2005-06-27  Matti Aarnio  <mea@zmailer.org>
+
+	* transports/mailbox/mailbox.c, transports/mailbox/dotlock.c:
+	    Learned an error in my ways of doing dot-lock
+	    acquisition -- FIRST DOTLOCK, THEN open mailbox file!
+	    This harmed certain NFS users...
+	    (While debugging proper dotlocking, added some debug
+	     verboselog prints also...)
+
 2005-06-23  Matti Aarnio  <mea@zmailer.org>
 
 	* smtpserver/smtpserver.c, smtpserver/smtpserver.h,
